all.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-service
  namespace: camunda-test
spec:
  ports:
  - port: 31337
    protocol: TCP
    targetPort: 8080
  selector:
    app: camunda-engine
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camunda-engine
  name: my-deployment
  namespace: camunda-test
spec:
  selector:
    matchLabels:
      app: camunda-engine
  template:
    metadata:
      labels:
        app: camunda-engine
    spec:
      containers:
      - image: camunda/camunda-bpm-platform:run
        name: camunda-engine
        ports:
        - containerPort: 8080
