service.yaml
kind: Service
apiVersion: v1
metadata:
  name: camunda-service
  labels:
    app: camunda
spec:
  type: NodePort
  selector:
    app: camunda
  ports:
    - port: 8080
      nodePort: 31337
      protocol: TCP
